Adding notes to the slides

--- a/BayesianColibri/baco.bib
+++ b/BayesianColibri/baco.bib
@@ -6,3 +6,9 @@
   year={1973},
   publisher={JSTOR}
 }
+@techreport{Frigyik2010,
+  title={Introduction to the Dirichlet distribution and related processes},
+  author={Frigyik, Bela A and Kapila, Amol and Gupta, Maya R},
+  year={2010},
+  institution={Technical Report UWEETR-2010-0006, Department of Electrical Engineering, University of Washington. URL http://www. ee. washington. edu/research/guptalab/publications/UWEETR-2010-0006. pdf}
+}
