--- a/BayesianColibri/baco.tex
+++ b/BayesianColibri/baco.tex
@@ -1,8 +1,9 @@
-\documentclass{beamer}
+%\documentclass{beamer}
+%\setbeameroption{show notes}
 \usetheme{rured}
 \setbeamertemplate{navigation symbols}{}
+\setbeamertemplate{note page}[plain]
 \usepackage{graphicx}
-\setbeameroption{show notes}
 \usepackage[english]{babel}
 \usepackage{listings,amsmath}
 \usepackage{algorithm2e}
