Small change and a make file!

--- a/BayesianColibri/baco.tex
+++ b/BayesianColibri/baco.tex
@@ -211,6 +211,19 @@
                 \onslide<12->{\node[node distance=0.1cm,below right=of t3] (c6) {6};}
             \end{tikzpicture}
         \end{center}            
+        \note[item]<1>{1}
+        \note[item]<2>{2}
+        \note[item]<3>{3}
+        \note[item]<4>{4}
+        \note[item]<5>{5}
+        \note[item]<6>{6}
+        \note[item]<7>{7}
+        \note[item]<8>{8}
+        \note[item]<9>{9}
+        \note[item]<10>{10}
+        \note[item]<11>{11}
+        \note[item]<12>{12}
+        \note[item]<13>{13}
 
         $\uncover<3->{P=\frac{\alpha}{\alpha}\uncover<5->{\frac{1}{\alpha+1}\uncover<7->{\frac{\alpha}{\alpha+2}\uncover<9->{\frac{\alpha}{\alpha+3}\uncover<11->{\frac{2}{\alpha+4}\uncover<13->{\frac{\alpha}{\alpha+5}$}}}}}} \uncover<14->{$\rightarrow P(\pi_{[N]}) = \frac{\alpha^K}{\alpha^{(N)}}\prod_{c\in\pi_{[N]}}(|c|-1)!$}
     \end{block}
@@ -508,6 +521,9 @@
 
     DHPYPLM
 \end{frame}
+\note{
+
+}
 
 \appendix
 \begin{frame}[label=dirichletsupplemental]
@@ -571,5 +587,8 @@ Back to the \hyperlink{dirichletprocess}{Dirichlet Process}.
    
     Back to the \hyperlink{crpexample}{CRP example}. 
 \end{frame}
+\note{
+
+}
 
 \end{document}
